# backend/api/swagger.json
@@ -235,73 +235,6 @@
                 ]
             }
         },
-        "/auth/generate-otp": {
-            "post": {
-                "operationId": "AuthController_generateOtp",
-                "parameters": [],
-                "responses": {
-                    "201": {
-                        "description": ""
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ValidationErrorDto"
-                                }
-                            }
-                        }
-                    }
-                },
-                "tags": [
-                    "auth"
-                ],
-                "security": [
-                    {
-                        "cookie": []
-                    }
-                ]
-            }
-        },
-        "/auth/verify-otp": {
-            "post": {
-                "operationId": "AuthController_verifyOtp",
-                "parameters": [
-                    {
-                        "name": "otp",
-                        "required": true,
-                        "in": "query",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": ""
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ValidationErrorDto"
-                                }
-                            }
-                        }
-                    }
-                },
-                "tags": [
-                    "auth"
-                ],
-                "security": [
-                    {
-                        "cookie": []
-                    }
-                ]
-            }
-        },
         "/auth/logout": {
             "post": {
                 "operationId": "AuthController_logout",
@@ -403,7 +336,7 @@
                     }
                 },
                 "tags": [
-                    "auth/google"
+                    "google"
                 ]
             }
         },
@@ -424,7 +357,84 @@
                     }
                 },
                 "tags": [
-                    "auth/google"
+                    "google"
+                ]
+            }
+        },
+        "/auth/google/login": {
+            "get": {
+                "operationId": "GoogleController_googleAuthFrontend",
+                "parameters": [
+                    {
+                        "name": "idToken",
+                        "required": true,
+                        "in": "header",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserEntity"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "google"
+                ]
+            }
+        },
+        "/auth/otp/generate-otp": {
+            "post": {
+                "operationId": "OtpController_generateOtp",
+                "parameters": [],
+                "responses": {
+                    "201": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "otp"
+                ],
+                "security": [
+                    {
+                        "cookie": []
+                    }
+                ]
+            }
+        },
+        "/auth/otp/verify-otp": {
+            "post": {
+                "operationId": "OtpController_verifyOtp",
+                "parameters": [
+                    {
+                        "name": "otp",
+                        "required": true,
+                        "in": "header",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "otp"
+                ],
+                "security": [
+                    {
+                        "cookie": []
+                    }
                 ]
             }
         },
@@ -886,6 +896,18 @@
                 "name": "auth-cookie",
                 "description": "Cookies are set automatically. No need to add.",
                 "scheme": "bearer"
+            },
+            "oauth2": {
+                "type": "oauth2",
+                "flows": {
+                    "implicit": {
+                        "authorizationUrl": "http://localhost:3000/auth/google/backend-login",
+                        "scopes": {
+                            "read:users": "read users",
+                            "write:users": "modify users"
+                        }
+                    }
+                }
             }
         },
         "schemas": {
