# backend/src/auth/auth.controller.ts
@@ -1,19 +1,16 @@
-import { Controller, Get, Post, Body, Res, UseGuards, Query, Req, HttpException, HttpStatus } from '@nestjs/common';
+import { Controller, Get, Post, Body, Res, UseGuards,  HttpException, HttpStatus } from '@nestjs/common';
 import { ApiBadRequestResponse, ApiConflictResponse, ApiCookieAuth, ApiTags } from '@nestjs/swagger';
 import { ValidationErrorDto } from 'src/shared/dto/validation-error.dto';
 import { UsersService } from 'src/users/users.service';
 import { CredentialLogin } from './dto/credential-login.dto';
 import { Response } from 'express';
-import { MailService } from '../shared/mail/mail.service';
 import { AccessTokenService } from './access-token/access-token.service';
 import { RefreshTokenService } from './refresh-token/refresh-token.service';
 import { AuthUser } from './decorator/auth.gaurd';
 import { RefreshTokenGuard } from './refresh-token/refresh-token.gaurd';
 import { AccessTokenGuard } from './access-token/access-token.gaurd';
 import { JwtService } from '@nestjs/jwt';
-import { VerifyEmailDto } from './dto/verify-emaill.dto';
 import { CredentailRegister } from './dto/credential-register.dto';
-import { OtpService } from 'src/shared/otp/otp.service';
 
 
 @Controller('auth')
@@ -23,8 +20,6 @@ export class AuthController {
   constructor(
     private readonly jwtService: JwtService,
     private readonly userService: UsersService,
-    private readonly mailService: MailService,
-    private readonly otpService: OtpService,
     private readonly accessTokenService: AccessTokenService,
     private readonly refreshTokenService: RefreshTokenService) { }
 
@@ -49,26 +44,6 @@ export class AuthController {
     return { message: "User created successfully" };
   }
 
-
-  @UseGuards(AccessTokenGuard)
-  @ApiCookieAuth()
-  @Post("generate-otp")
-  async generateOtp(@AuthUser() id: number) {
-    const user = await this.userService.findOne({ id });
-    const otp = await this.otpService.generateOtp(user.id);
-    await this.mailService.sendVerificationMail(user.email, otp);
-    return { message: "Otp sent successfully" };
-  }
-
-  @Post("verify-otp")
-  @ApiCookieAuth()
-  @UseGuards(AccessTokenGuard)
-  async verifyOtp(@AuthUser() id: number, @Query() { otp }: VerifyEmailDto) {
-    if (await this.otpService.verifyOtp(id, otp)) {
-      return { message: "Otp verified successfully" };
-    }
-    throw new HttpException('Invalid otp', HttpStatus.UNAUTHORIZED);
-  }
 
 
   @Post("logout")
