# backend/src/auth/google/google.controller.ts
@@ -1,6 +1,5 @@
-import { Controller, Get, Req, Res, UseGuards } from '@nestjs/common';
+import { Controller, Get, Headers, Req, Res, UseGuards } from '@nestjs/common';
 import { ApiTags } from '@nestjs/swagger';
-import { CreateUserDto } from 'src/users/dto/create-user.dto';
 import { UsersService } from 'src/users/users.service';
 import { AccessTokenService } from '../access-token/access-token.service';
 import { RefreshTokenService } from '../refresh-token/refresh-token.service';
@@ -9,15 +8,15 @@ import { Request, Response } from 'express';
 import { GoogleService } from './google.service';
 
 @Controller('auth/google')
-@ApiTags('auth/google')
+@ApiTags('google')
 export class GoogleController {
   constructor(
     private readonly userService: UsersService,
     private readonly googleAuthService: GoogleService,
     private readonly accessTokenService: AccessTokenService,
     private readonly refreshTokenService: RefreshTokenService) { }
-    
-  @Get('backend-login')
+
+  @Get("backend-login")
   @UseGuards(GoogleGaurd)
   async googleAuth(@Req() req: any) { }
 
@@ -25,10 +24,9 @@ export class GoogleController {
   @UseGuards(GoogleGaurd)
   @Get('callback')
   async googleCallback(
-    @Req() req: { accessToken: string },
+    @Req() req: any,
     @Res({ passthrough: true }) res: Response) {
-    const { accessToken } = req;
-    const userData = await this.googleAuthService.getUserDetails(accessToken);
+    const userData = await this.googleAuthService.getUserDetails(req.user.accessToken);
     let user = await this.userService.findOne({ email: userData.email });
     if (!user)
       user = await this.userService.create(userData);
@@ -38,4 +36,17 @@ export class GoogleController {
     return user;
   }
 
+  @Get("login")
+  async googleAuthFrontend(
+    @Headers('idToken') idToken: string,
+    @Res({ passthrough: true }) res: Response
+  ) {
+    const userData = await this.googleAuthService.getUserDetailsFromIdToken(idToken);
+    let user = await this.userService.findOne({ email: userData.email });
+    if (!user)
+      user = await this.userService.create(userData);
+    this.accessTokenService.sendCookie(res, user);
+    this.refreshTokenService.sendCookie(res, user);
+    return user;
+  }
 }
